melhoria no estilo da pagina
alteração em quase todo o site saindo de estilo simples em preto em branco para um estilo moderno

--- a/c++.html
+++ b/c++.html
@@ -5,14 +5,14 @@
   <title>CodeFlow - C++</title>
   <link rel="stylesheet" href="CSS/linguagens.css">
 </head>
-<body>
+<body class="chat-page">
+
   <header>
   <div class="menu-icon" onclick="toggleMenu()">☰</div>
   <div class="dropdown-menu" id="dropdownMenu">
     <a href="index.html">inicio</a>
     <a href="perfil.html">Perfil</a>
     <a href="configuracoes.html">Configurações</a>
-    <a href="pagamento.html">Dados de Pagamento</a>
     <a href="notificacoes.html">Notificações</a>
     <a href="chats.html">chats</a>
     <a href="meus-codigos.html">Meus Códigos</a>
