--- a/perfil.html
+++ b/perfil.html
@@ -3,222 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Perfil - CodeFlow</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 30px;
-      border-bottom: 2px solid #000;
-    }
-
-    .topbar {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: #20232a;
-      padding: 10px 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      z-index: 999;
-    }
-
-    .topbar img {
-      height: 28px;
-      cursor: pointer;
-    }
-
-    .topbar button {
-      background-color: #61dafb;
-      border: none;
-      padding: 8px 14px;
-      border-radius: 4px;
-      font-weight: bold;
-      color: #000;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .topbar button:hover {
-      background-color: #21a1f1;
-    }
-
-    .container {
-      padding: 80px 20px 40px;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    .profile-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 20px;
-    }
-
-    .avatar {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid #ccc;
-    }
-
-    .info-container {
-      flex: 1;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .user-info {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .user-info h1 {
-      margin: 0;
-      font-size: 26px;
-    }
-
-    .user-info p {
-      margin-top: 5px;
-      color: #666;
-    }
-
-    .editar-btn {
-      padding: 8px 14px;
-      font-size: 14px;
-      background-color: #61dafb;
-      border: none;
-      border-radius: 4px;
-      color: #000;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    .editar-btn:hover {
-      background-color: #21a1f1;
-    }
-
-    .tabs {
-      margin-top: 30px;
-      display: flex;
-      gap: 20px;
-      border-bottom: 2px solid #ccc;
-    }
-
-    .tabs button {
-      background: none;
-      border: none;
-      font-size: 16px;
-      padding: 10px 0;
-      cursor: pointer;
-      color: #555;
-      border-bottom: 3px solid transparent;
-    }
-
-    .tabs button.active {
-      color: #000;
-      border-color: #61dafb;
-      font-weight: bold;
-    }
-
-    .tab-content {
-      margin-top: 30px;
-    }
-
-    .activity-card {
-      background: white;
-      padding: 15px 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-    }
-
-    .activity-card span {
-      display: block;
-      font-size: 14px;
-      color: #777;
-      margin-top: 4px;
-    }
-
-    @media (max-width: 600px) {
-      .profile-header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .tabs {
-        flex-direction: column;
-        gap: 10px;
-      }
-    }
-
-    .dropdown-menu {
-      display: none;
-      position: absolute;
-      top: 60px;
-      left: 30px;
-      background-color: #f9f9f9;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      width: 200px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-    }
-
-    .dropdown-menu a {
-      display: block;
-      padding: 12px 20px;
-      color: #000;
-      text-decoration: none;
-      border-bottom: 1px solid #eee;
-    }
-
-    .dropdown-menu a:hover {
-      background-color: #e6e6e6;
-    }
-
-      .menu-icon {
-      font-size: 30px;
-      cursor: pointer;
-    }
-
-    .icons {
-      display: flex;
-      gap: 20px;
-      
-    }
-
-    .icons img {
-      cursor: pointer;
-      height: 40px;
-      width: 40px;
-    }
-
-    .search-box {
-      display: flex;
-      align-items: center;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 5px 10px;
-    }
-
-    .search-box input {
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
-
-  </style>
+  <link rel="stylesheet" href="CSS/linguagens.css">
 </head>
 <body>
 
@@ -228,7 +13,6 @@
     <a href="index.html">Início</a>
     <a href="perfil.html">Perfil</a>
     <a href="configuracoes.html">Configurações</a>
-    <a href="pagamento.html">Pagamento</a>
     <a href="notificacoes.html">Notificações</a>
     <a href="chats.html">Chats</a>
     <a href="meus-codigos.html">Meus Códigos</a>
@@ -316,7 +100,7 @@
   <div class="activity-card">
     <p><strong>Email:</strong> <span id="emailConta">joaodev@email.com</span></p>
     <p><strong>Tipo de Conta:</strong> <span id="tipoConta">Desenvolvedor</span></p>
-    <p><strong>Plano:</strong> <span id="planoConta">Gratuito</span></p>
+    <p><strong>Portifolio:</strong><a href="https://br.linkedin.com"> <span id="planoConta">https://br.linkedin.com</span></a></p>
     <br>
     <button onclick="editarConta()" class="editar-btn">Editar Informações</button>
   </div>
