--- a/javascript.html
+++ b/javascript.html
@@ -6,12 +6,11 @@
   <link rel="stylesheet" href="CSS/linguagens.css">
 </head>
 <body>
-  < <header>
+   <header>
     <div class="menu-icon" onclick="toggleMenu()">☰</div>
     <div class="dropdown-menu" id="dropdownMenu">
       <a href="perfil.html">Perfil</a>
       <a href="configuracoes.html">Configurações</a>
-      <a href="pagamento.html">Dados de Pagamento</a>
       <a href="notificacoes.html">Notificações</a>
       <a href="chats.html">chats</a>
       <a href="meus-codigos.html">Meus Códigos</a>
