--- a/sair.html
+++ b/sair.html
@@ -2,20 +2,123 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Saída do Sistema</title>
+  <title>Login - CodeFlow</title>
   <style>
-    body {
-      font-family: sans-serif;
-      padding: 40px;
-      background-color: #f4f4f4;
+    * {
+      box-sizing: border-box;
     }
-    h1 {
-      color: #333;
+
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      color: #fff;
+    }
+
+    .login-container {
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 40px;
+      border-radius: 12px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+      width: 320px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    .login-container h2 {
+      text-align: center;
+      margin: 0 0 10px;
+    }
+
+    input[type="text"],
+    input[type="password"],
+    button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+      background-color: #f5f5f5;
+      color: #000;
+    }
+
+    button {
+      background-color: #61dafb;
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #21a1f1;
+    }
+
+    .error {
+      color: #ff6b6b;
+      text-align: center;
+      font-size: 14px;
+    }
+
+    .signup-link {
+      text-align: center;
+      font-size: 0.9em;
+    }
+
+    .signup-link a {
+      color: #61dafb;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <h1>Saída do Sistema</h1>
-  <p>Esta é a saída do sistema.</p>
+
+<div class="login-container">
+  <h2>🔐 Login - CodeFlow</h2>
+  <input type="text" id="usuario" placeholder="Usuário ou Email">
+  <input type="password" id="senha" placeholder="Senha">
+  <button onclick="fazerLogin()">Entrar</button>
+  <div class="error" id="erroLogin"></div>
+  <div class="signup-link">
+    Não tem uma conta? <a href="#">Cadastre-se</a>
+  </div>
+</div>
+
+<script>
+  const usuarioDemo = {
+    usuario: "admin",
+    senha: "123456"
+  };
+
+  function fazerLogin() {
+    const user = document.getElementById("usuario").value.trim();
+    const senha = document.getElementById("senha").value.trim();
+    const erro = document.getElementById("erroLogin");
+
+    if (!user || !senha) {
+      erro.textContent = "Preencha todos os campos.";
+      return;
+    }
+
+    if (user === usuarioDemo.usuario && senha === usuarioDemo.senha) {
+      erro.textContent = "";
+      alert("Login bem-sucedido!");
+      window.location.href = "meus-codigos.html";
+    } else {
+      erro.textContent = "Usuário ou senha incorretos.";
+    }
+  }
+</script>
+
 </body>
 </html>
