alteração do nome do arquivo
uma pequena alteração no nome do arquivo "sair" para "login"

--- a/comunidade.html
+++ b/comunidade.html
@@ -16,7 +16,7 @@
       <a href="notificacoes.html">Notificações</a>
       <a href="chats.html">Chats</a>
       <a href="meus-codigos.html">Meus Códigos</a>
-      <a href="sair.html">Login</a>
+      <a href="login.html">Login</a>
     </div>
     <div class="icons">
       <a href="index.html"><img src="https://img.icons8.com/?size=100&id=2797&format=png&color=000000" alt="home"/></a>
