--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="notificacoes.html">Notificações</a>
       <a href="chats.html">chats</a>
       <a href="meus-codigos.html">Meus Códigos</a>
-      <a href="sair.html">Login</a>
+      <a href="login.html">Login</a>
     </div>
     <div class="icons">
       
